fix(columns): spacing between h2 and h3

--- a/express/blocks/columns/columns.css
+++ b/express/blocks/columns/columns.css
@@ -394,6 +394,10 @@ main .columns.highlight .column h5 {
   margin-bottom: 8px;
 }
 
+main .columns h2 + h3 {
+  margin-top: 20px;
+}
+
 main .columns.highlight .column h5 + h2,
 main .columns.highlight .column h5 + h3,
 main .columns.highlight .column h5 + h4 {
